Backboning on going

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -61,7 +61,7 @@
 </div>
 </script>
 
-<script type="text/template" id="message-template">
+<script type="text/template" id="msg-template">
 <div class="view">
     <div class="alert alert-warning alert-dismissible <%= hidden ? 'hidden' : '' %>" role="alert" class="lead" id="alert">
       <button type="button" class="close">
