--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -65,7 +65,7 @@
 
 <script type="text/template" id="msg-template">
 <div class="view">
-    <div class="alert alert-<%- type %>" role="alert" class="lead" id="alert">
+    <div class="alert alert-<%- type %>" class='lead' role="alert" id="alert">
       <button type="button" class="close">
         <span aria-hidden="true">&times;</span>
         <span class="sr-only">Close</span>
