--- a/app/templates/email.html
+++ b/app/templates/email.html
@@ -1,3 +1,5 @@
 <h1>RemindMe alert</h1>
 
-Hey {{ email }}, something's about to happen on <b>{{ start_date }}</b>...
+<p>Hey {{ email }},</p>
+
+<p>Something's about to happen on <b>{{ start_date }}</b>...</p>
