--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -43,15 +43,9 @@
         </div>
       </div>
     </div>
-    <!--
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-    -->
     <script src="{{url_for('static', filename='vendor/underscore.js')}}"></script>
-    <script src="{{url_for('static', filename='vendor/jquery.js')}}"></script>
-    <script src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/jquery-1.11.2.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/backbone.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 </body>
