--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>alerte rouge</title>
+    <!--
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    -->
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.css')}}"/>
     <link rel="stylesheet" href="{{url_for('static', filename='cover.css')}}"/>
 </head>
 
@@ -40,10 +43,16 @@
         </div>
       </div>
     </div>
+    <!--
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    -->
+    <script src="{{url_for('static', filename='vendor/jquery.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/underscore.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>
     <script src="{{url_for('static', filename='script.js')}}"></script>
 </body>
 </html>
