move js to static/javascripts

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -53,7 +53,7 @@
     <script src="{{url_for('static', filename='vendor/underscore.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>
-    <script src="{{url_for('static', filename='script.js')}}"></script>
+    <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 </body>
 </html>
 
