moved styles to static/css

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     -->
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.css')}}"/>
-    <link rel="stylesheet" href="{{url_for('static', filename='cover.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/cover.css')}}"/>
 </head>
 
 <body>
