Clean deploy + update page template

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -35,7 +35,7 @@
             <div class="inner">
             
               <footer>
-                <p>using <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://github.com/emilecaron">Zozor</a>.</p>
+                <p>using <a href="http://flask.pocoo.org/">Flask</a>, <a href="http://backbonejs.org/">Backbone</a>, <a href="http://getbootstrap.com/">Bootstrap</a> and more, by <a href="https://github.com/emilecaron">Zozor</a>.</p>
               </footer>
             
             </div>
