Removed cover.css

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -6,20 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>alerte rouge</title>
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.css')}}"/>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/cover.css')}}"/>
 </head>
 
+
+
 <body>
+
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header"> 
+          <a class="navbar-brand" href="#">Remind me</a>
+        </div>
+      </div>
+    </nav>
+
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
         <div class="cover-container">
           <div class="inner cover">
 
-            <header>      
-              <h1 class="cover-heading">Remind me.</h1>
+
+            
               the reminder for gentlemen
-              <h3> </h3>
-            </header>  
 
             <section>
               <div id="form-div"></div>
