--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -34,8 +34,9 @@
 
       <div class="row vertical-align">
         <div class="container-fluid col-md-6">
-          <h1>the reminder for gentlemen</h1>
-          <p>Explanations about the meaning of life and stuff</p>
+          <h1>The reminder for gentlemen</h1>
+          <p>Enter your email and the date when things start.</p>
+          <p>You will be reminded by email 3 days before it begins. Every time.</p>
         </div>
 
         <div class="container-fluid col-md-6">
@@ -56,6 +57,16 @@
     <script src="{{url_for('static', filename='vendor/backbone.js')}}"></script>
     <script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-58687298-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+
 </body>
 </html>
 
