--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>alerte rouge</title>
+    <title>Remind me</title>
     <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.css')}}"/>
     <link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>
 </head>
