--- a/app/templates/email.html
+++ b/app/templates/email.html
@@ -1,5 +1,7 @@
-<h1>RemindMe alert</h1>
+<h1>Remind me alert</h1>
 
 <p>Hey {{ email }},</p>
 
 <p>Something's about to happen on <b>{{ start_date }}</b>...</p>
+
+<a href="https://zozor-remindme.herokuapp.com/">Remind me</a>
