--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -75,14 +75,14 @@
 <!-- Templates -->
 <script type="text/template" id="form-template">
 <div class="view">
-<form role="form" action="javascript:void(0);" class="lead navbar-form">
-  <div class="form-group">
-    <input type="date" class="form-control" id="date" required autofocus value="<%- date %>"></input>
-    <input type="email" class="form-control" id="email" placeholder="email..." required value="<%- email %>" ></input>
-    <button type="submit" class="btn btn-default">Remind me</button>
+  <form role="form" action="javascript:void(0);" class="lead navbar-form">
+    <div class="form-group<% if (folded) { %> folded<% } %>">
+      <input type="date" class="form-control foldable" id="date" required autofocus value="<%- date %>"></input>
+      <input type="email" class="form-control foldable" id="email" placeholder="email..." required value="<%- email %>" ></input>
+      <button type="submit" class="btn btn-default">Remind me</button>
+    </div>
+  </form>
   </div>
-</form>
-</div>
 </script>
 
 <script type="text/template" id="msg-template">
@@ -98,3 +98,4 @@
     </div>
 </div>
 </script>
+
