--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Remind me</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.css')}}"/>
+    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.min.css')}}"/>
     <link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>
     <script type="text/javascript">
     var _gaq = _gaq || [];
@@ -62,10 +62,10 @@
       </div>
     </nav>
 
-    <script src="{{url_for('static', filename='vendor/underscore.js')}}"></script>
-    <script src="{{url_for('static', filename='vendor/jquery-1.11.2.js')}}"></script>
-    <script src="{{url_for('static', filename='vendor/backbone.js')}}"></script>
-    <script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/underscore-min.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/jquery-1.11.2.min.js')}}"></script>
+    <script src="{{url_for('static', filename='vendor/backbone-min.js')}}"></script>
+    <!--<script src="{{url_for('static', filename='vendor/bootstrap.js')}}"></script>-->
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 
 </body>
