--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -3,23 +3,45 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remind me</title>
-    <link rel="stylesheet" href="cdn/bootstrap.min.css"/>
+    <title>Remind me, the gentleman app</title>
+    <!--<link rel="stylesheet" href="cdn/bootstrap.min.css"/>-->
     <link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>
+
     <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-58687298-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-58687298-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </head>
 
+<body>
+    <div id="header"></div>
+    
+    <div id="page"></div>
 
+    <div id="footer">
+        <p>using <a href="http://flask.pocoo.org/">Flask</a>, <a href="http://backbonejs.org/">Backbone</a>, <a href="http://getbootstrap.com/">Bootstrap</a> and more, by <a href="https://github.com/emilecaron/remindme">Zozor</a>.</p>
+    </div>
+
+    <script src="cdn/underscore-min.js"></script>
+    <script src="cdn/jquery-1.11.2.min.js"></script>
+    <script src="cdn/backbone-min.js"></script>
+    <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
+</body>
+
+<script type="text/template" id="header-template">
+    <div id="header-caption">Chez Papa</div>
+    <% _.each(pages, function(page){ %>
+        <a class='header-link'><%= page.title %></a>
+    <% }); %>
+</script>
+
+<!--
 <body>
 
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -97,4 +119,3 @@
     </div>
 </div>
 </script>
-
