--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Remind me</title>
-    <link rel="stylesheet" href="cdn/bootstrap.min.css"/>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>
-    <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-58687298-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-</head>
+  <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Remind me</title>
+      <link rel="stylesheet" href="cdn/bootstrap.min.css"/>
+      <link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>
+      <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-58687298-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
+  </head>
 
 
-<body>
+  <body>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
 
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
@@ -47,6 +56,8 @@
           <h1>The reminder for gentlemen</h1>
           <p>Enter your email and the date when things start.</p>
           <p>You will be reminded by email 3 days before it begins. Every time.</p>
+          <br />
+          <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button"></div>
         </div>
 
         <div class="container-fluid col-md-6">
@@ -67,7 +78,7 @@
     <script src="cdn/backbone-min.js"></script>
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 
-</body>
+  </body>
 </html>
 
 
