brand new page system

--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -3,7 +3,7 @@
 
   <head>
       <meta charset="utf-8">
-      <title>Remind me, the gentleman app</title>
+      <title>@Zozor</title>
       <!--<link rel="stylesheet" href="{{url_for('static', filename='css/stuff.css')}}"/>-->
       <link rel="stylesheet" href="cdn/bootstrap.min.css"/>
 
@@ -30,7 +30,7 @@
 
     <div id="header" role="navigation" class="navbar navbar-default"></div>
     
-    <div id="page"></div>
+    <div id="page" class="container-fluid"></div>
 
 
     <script src="cdn/underscore-min.js"></script>
@@ -43,7 +43,7 @@
 <script type="text/template" id="header-template">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a id="header-caption" class="navbar-brand" href="#">Chez Papa</a>
+      <a id="header-caption" class="navbar-brand" href="#">@Zozor</a>
     </div>
     <div class="navbar-collapse collapse">
       <ul id="header-links" class="nav navbar-nav"></ul>
