--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -40,6 +40,7 @@
     <script src="{{url_for('static', filename='javascripts/bundle.js')}}"></script>
 </body>
 
+<!-- Templates -->
 <script type="text/template" id="header-template">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -52,6 +53,16 @@
       </ul>
     </div>
   </div>
+</script>
+
+<!-- Pannels -->
+<script type="text/template" id="rme_welcome">
+  <h1>Yo!</h1>
+  <button id="welcome_button">Go!</button>
+</script>
+
+<script type="text/template" id="rme_date">
+  <h1>Date!</h1>
 </script>
 
 <!--
